MDEV-17568: LATERAL DERIVED is not clearly visible in EXPLAIN FORMAT=JSON

Make LATERAL DERIVED tables visible in EXPLAIN FORMAT=JSON output.